# ChatGPT_test_0425

./: .gitignore  di2.py  distplot.py  find_missData.py  flask_api.py  hitmap.py  model_app.py  pyproject.toml  rf_model.pkl
chatGPT_test/: pyproject.toml
chatGPT_test/Mission/: day3_book_list.py  library_list_Day3.py  python_basic_Day2.py  web_crawling_Day1.py  도서목록.xlsx
templates/: index.html  index_bt.html  index_list.html  index_test.html  price.html
