[tool.poetry]
name = "chatgpt-test"
version = "0.1.0"
description = ""
authors = ["woonmong <kiata@naver.com>"]
readme = "README.md"
packages = [{include = "chatgpt_test"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
